tgthrProgramManagement/force-app/main/default/objects/InterviewAnswer__c/InterviewAnswer__c.object-meta.xml
<CustomObject>
    <label>InterviewAnswer</label>
    <nameField>
        <label>InterviewAnswer Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>InterviewAnswers</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>