tgthrProgramManagement/force-app/main/default/objects/InterviewAnswer__c/fields/Interview__c.field-meta.xml
<CustomField>
    <fullName>Interview__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Interview</label>
    <referenceTo>Interview__c</referenceTo>
    <relationshipLabel>InterviewAnswers</relationshipLabel>
    <relationshipName>InterviewAnswers</relationshipName>
    <type>Lookup</type>
</CustomField>