tgthrProgramManagement/force-app/main/default/objects/InterviewAnswer__c/fields/InterviewQuestion__c.field-meta.xml
<CustomField>
    <fullName>InterviewQuestion__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>InterviewQuestion</label>
    <referenceTo>InterviewQuestion__c</referenceTo>
    <relationshipLabel>InterviewAnswers</relationshipLabel>
    <relationshipName>InterviewAnswers</relationshipName>
    <type>Lookup</type>
</CustomField>