tgthrProgramManagement/force-app/main/default/objects/InterviewAnswer__c/fields/Is_Obfuscated__c.field-meta.xml
<CustomField>
    <fullName>Is_Obfuscated__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Obfuscated</label>
    <type>Checkbox</type>
</CustomField>