tgthrProgramManagement/force-app/main/default/objects/InterviewAnswer__c/fields/Question_API_Name__c.field-meta.xml
<CustomField>
    <fullName>Question_API_Name__c</fullName>
    <description>Denormalized for speed</description>
    <label>Question API Name</label>
    <type>TextArea</type>
</CustomField>