tgthrProgramManagement/force-app/main/default/objects/InterviewAnswer__c/fields/Response_Boolean__c.field-meta.xml
<CustomField>
    <fullName>Response_Boolean__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Response Boolean</label>
    <type>Checkbox</type>
</CustomField>