tgthrProgramManagement/force-app/main/default/objects/InterviewAnswer__c/fields/Response_Number__c.field-meta.xml
<CustomField>
    <fullName>Response_Number__c</fullName>
    <label>Response Number</label>
    <precision>7</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>