tgthrProgramManagement/force-app/main/default/objects/InterviewAnswer__c/fields/Response_Picklist__c.field-meta.xml
<CustomField>
    <fullName>Response_Picklist__c</fullName>
    <label>Response Picklist</label>
    <type>TextArea</type>
</CustomField>