tgthrProgramManagement/force-app/main/default/objects/InterviewAnswer__c/fields/Response_Score__c.field-meta.xml
<CustomField>
    <fullName>Response_Score__c</fullName>
    <label>Response Score</label>
    <type>TextArea</type>
</CustomField>