tgthrProgramManagement/force-app/main/default/objects/InterviewAnswer__c/fields/Section__c.field-meta.xml
<CustomField>
    <fullName>Section__c</fullName>
    <description>Denormalized for grouping</description>
    <label>Section</label>
    <type>TextArea</type>
</CustomField>