tgthrProgramManagement/force-app/main/default/objects/InterviewAnswer__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Interview__c</columns>
    <columns>Question_API_Name__c</columns>
    <columns>Response_Text__c</columns>
    <columns>InterviewQuestion__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>